Bug 241385 - REGRESSION (251356@main): TestWebKitAPI.IPCTestingAPI.CanSendSharedMemory is consistently timing out
Summary: REGRESSION (251356@main): TestWebKitAPI.IPCTestingAPI.CanSendSharedMemory is ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: Safari 13
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jean-Yves Avenard [:jya]
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-06-07 14:27 PDT by Ryan Haddad
Modified: 2022-06-29 09:56 PDT (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ryan Haddad 2022-06-07 14:27:44 PDT
TestWebKitAPI.IPCTestingAPI.CanSendSharedMemory is consistently timing out on iOS and macOS bots after https://commits.webkit.org/251356@main landed

https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.IPCTestingAPI.CanSendSharedMemory
Comment 1 Radar WebKit Bug Importer 2022-06-07 14:27:52 PDT
<rdar://problem/94566204>
Comment 2 Jean-Yves Avenard [:jya] 2022-06-14 08:20:31 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1502
Comment 3 EWS 2022-06-29 09:56:23 PDT
Committed 251952@main (61f8d5ff2486): <https://commits.webkit.org/251952@main>

Reviewed commits have been landed. Closing PR #1502 and removing active labels.