REGRESSION (251356@main): TestWebKitAPI.IPCTestingAPI.CanSendSharedMemory is consistently timing out https://bugs.webkit.org/show_bug.cgi?id=241385 rdar://problem/94566204

Reviewed by Jer Noble.

This test relied on an implementation detail to check that the SharedMemory was
sent without error to the remote process.
However, following bug 240902 this was no longer the case causing the test to
fail.

Add an API_TEST only API, specifically conceived to use SharedMemory and amend
the original test to check on the buffer received.

* Source/WebKit/UIProcess/Cocoa/WebPasteboardProxyCocoa.mm:
(WebKit::WebPasteboardProxy::testIPCSharedMemory):
* Source/WebKit/UIProcess/WebPasteboardProxy.h:
* Source/WebKit/UIProcess/WebPasteboardProxy.messages.in:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/IPCTestingAPI.mm:
(TEST):

Canonical link: https://commits.webkit.org/251952@main